--- a/LCD Remote Controller/MainWindow.xaml
+++ b/LCD Remote Controller/MainWindow.xaml
@@ -47,7 +47,7 @@
                         <TextBlock Text="Write Text" VerticalAlignment="Top" HorizontalAlignment="Left" Padding="5,0,0,5" FontWeight="Bold"/>
                         <StackPanel Orientation="Vertical">
                             <StackPanel>
-                                <TextBox x:Name="writeBox" Text="Enter Text" FontFamily="Consolas" VerticalAlignment="Top" Margin="5,0" FontSize="16" Height="40" Width="150" AcceptsReturn="True" MaxLines="2"/>
+                                <TextBox x:Name="writeBox" Text="Enter Text" FontFamily="Consolas" VerticalAlignment="Top" Margin="5,0" FontSize="16" Height="80" Width="190" AcceptsReturn="True" MaxLines="2"/>
                                 <Grid Margin="5">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition/>
@@ -58,8 +58,8 @@
                                 </Grid>
                             </StackPanel>
                             <StackPanel Orientation="Vertical">
-                                <TextBlock Text="Insert Custom Character" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="5,0,5,5" FontWeight="Bold"/>
-                                <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="Insert Custom Character" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="5,0,5,5" FontWeight="Bold"/>
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                                     <Button Content="1" Tag="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="5,0,1,0" Padding="3,0" Width="15" Click="CustomCharInsert_Click"/>
                                     <Button Content="2" Tag="1" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="1,0" Padding="3,0" Width="15" Click="CustomCharInsert_Click"/>
                                     <Button Content="3" Tag="2" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="1,0" Padding="3,0" Width="15" Click="CustomCharInsert_Click"/>
@@ -176,6 +176,8 @@
                         <ComboBox x:Name="cursorLine" SelectedIndex="0" VerticalAlignment="Center">
                             <ComboBoxItem Content="1"/>
                             <ComboBoxItem Content="2"/>
+                            <ComboBoxItem Content="3"/>
+                            <ComboBoxItem Content="4"/>
                         </ComboBox>
                         <Button VerticalAlignment="Bottom" Content="Get" Padding="5,1,5,1" Click="GetCursorButton_Click" Margin="40,0,0,0" Width="42"/>
                     </StackPanel>
@@ -198,6 +200,10 @@
                             <ComboBoxItem Content="13"/>
                             <ComboBoxItem Content="14"/>
                             <ComboBoxItem Content="15"/>
+                            <ComboBoxItem Content="16"/>
+                            <ComboBoxItem Content="17"/>
+                            <ComboBoxItem Content="18"/>
+                            <ComboBoxItem Content="19"/>
                         </ComboBox>
                         <Button HorizontalAlignment="Right" VerticalAlignment="Bottom" Content="Move" Padding="5,1,5,1" Click="MoveCursorButton_Click" Margin="30,0,0,0" Width="42"/>
                     </StackPanel>
@@ -205,7 +211,7 @@
             </Border>
         </StackPanel>
         <StackPanel Orientation="Vertical">
-            <Border Margin="5,0,10,10" BorderBrush="DarkGray" BorderThickness="1" Width="300" Height="290">
+            <Border Margin="5,0,10,10" BorderBrush="DarkGray" BorderThickness="1" Width="300" Height="325">
                 <ScrollViewer x:Name="serialConsoleScroll" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible">
                     <TextBlock x:Name="serialConsole" FontFamily="Consolas"/>
                 </ScrollViewer>
